--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>記憶遊戲</title>
-    <link href="/public/cards.css" rel="stylesheet" />
+    <link href="public/cards.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -21,6 +21,6 @@
       </div>
     </div>
 
-    <script src="/public/cards.js"></script>
+    <script src="public/cards.js"></script>
   </body>
 </html>
